[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/paddle.png" type="Texture" id=1]
[ext_resource path="res://Paddle.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 50 )

[node name="Paddle" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SpecialDuration" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="SpecialCooldown" type="Timer" parent="."]
process_mode = 0
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="SpecialDuration" to="." method="_on_SpecialDuration_timeout"]
[connection signal="timeout" from="SpecialCooldown" to="." method="_on_SpecialCooldown_timeout"]
